--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "stripe": "^12.17.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
-    "@types/node": "^18.0.3",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^18.0.3",
     "nodemon": "^2.0.19",
     "prisma": "^3.15.2",
     "prisma-erd-generator": "^1.2.0",
