--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.9.4",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "randomstring": "^1.3.0",
     "stripe": "^12.17.0"
   },
   "devDependencies": {
@@ -23,6 +26,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.0.3",
+    "@types/randomstring": "^1.1.8",
     "nodemon": "^2.0.19",
     "prisma": "^3.15.2",
     "prisma-erd-generator": "^1.2.0",
