--- a/client/package.json
+++ b/client/package.json
@@ -5,15 +5,18 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "tail" : "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
+    "tail": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.1.2",
+    "@stripe/stripe-js": "^2.0.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
