--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host ",
-    "tail": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
+    "dev": "vite --host",
+    "tail": "npx tailwindcss -i ./src/input.css -o ./dist/output.css ",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
